# FluxPlayer

./: .gitignore  CMakeLists.txt  README.md  fluxplayer.ini  fluxplayer.ini.sample  setup_env.ps1  xmake.lua
assets/shaders/: video.frag
docs/: AI开发守则.md  代码剖析.md  字幕功能技术方案.md  播放速度技术方案.md  硬件加速解码技术文档.md  网页视频播放技术方案.md
include/FluxPlayer/: pch.h
include/FluxPlayer/audio/: AudioOutput.h
include/FluxPlayer/core/: AVSync.h  FrameQueue.h  MediaInfo.h  Player.h
include/FluxPlayer/decoder/: AudioDecoder.h  Demuxer.h  Frame.h  VideoDecoder.h
include/FluxPlayer/recorder/: Recorder.h
include/FluxPlayer/renderer/: GLRenderer.h  Shader.h
include/FluxPlayer/subtitle/: SubtitleDecoder.h  SubtitleManager.h
include/FluxPlayer/ui/: Controller.h  HomeScreen.h  Window.h
include/FluxPlayer/utils/: Config.h  DashMerger.h  Downloader.h  Logger.h  Screenshot.h  StreamExtractor.h  Timer.h
include/FluxPlayer/video/: FrameInterpolator.h
scripts/: bundle_ffmpeg_macos.py  package_macos.sh  package_windows.iss  package_windows.ps1
scripts/demo/: extract_stream.py
source/: pic.icns
source/Subtitles/: countdown.srt  test.md
src/: main.cpp
src/audio/: AudioOutput.cpp
src/core/: AVSync.cpp  FrameQueue.cpp  MediaInfo.cpp  Player.cpp
src/decoder/: AudioDecoder.cpp  Demuxer.cpp  Frame.cpp  VideoDecoder.cpp
src/recorder/: Recorder.cpp
src/renderer/: GLRenderer.cpp  Shader.cpp
src/subtitle/: SubtitleDecoder.cpp  SubtitleManager.cpp
src/ui/: Controller.cpp  HomeScreen.cpp  Window.cpp
src/utils/: Config.cpp  DashMerger.cpp  Downloader.cpp  Logger.cpp  Screenshot.cpp  StreamExtractor.cpp  Timer.cpp
src/video/: FrameInterpolator.cpp
